--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Title</title>
     <link media="all" rel="stylesheet" href="dist/style.min.css">
+     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" ></script>
 </head>
 <body>
-<h1 id="dod">uyuryuyeuyruyueyuyu</h1>
-<a href="#">обувь</a><a href="#">обувь</a><a href="#">обувь</a><a href="#">обувь</a><a href="#">обувь</a><a href="#">обувь</a>
-gjkhdfjklhklgjkhdfjkghjkdhfkjlsngjkhdfsjkhmnjkl
-<a href="#">обувь</a>
+<script src="dist/build.min.js"></script>
 
-<script src="dist/index.min.js"></script>
 </body>
 </html>
